# code-transformer

./: .gitignore  Makefile  README.md  claude.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/constitution/: principles.md  product.md  tech.md
docs/features/: README.md
docs/features/TEMPLATES/: design.md  requirements.md  tasks.md
docs/features/f001-streaming-pipeline/: design.md  requirements.md  tasks.md
src/code_transformer/: __init__.py  __main__.py
src/code_transformer/adapters/: embedding_writer.py  jsonl_reader.py  ports.py
src/code_transformer/application/: config.py  logging.py  pipeline.py
src/code_transformer/cli/: commands.py
src/code_transformer/domain/: embedding_service.py  exceptions.py  models.py
tests/integration/: test_pipeline.py
tests/unit/: test_embedding_service.py  test_embedding_writer.py  unit_json_reader.py
